[package]
name = "gst-plugin-segmentclipper"
version.workspace = true
authors = ["Thibault Saunier <tsaunier@igalia.com"]
repository.workspace = true
license = "MPL-2.0"
edition.workspace = true
rust-version.workspace = true
description = "GStreamer element to clip buffers based on segment events"

[dependencies]
gst.workspace = true
gst-base.workspace = true
gst-audio.workspace = true
gst-video.workspace = true
once_cell.workspace = true

[lib]
name = "gstsegmentclipper"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
default = []
static = []
capi = []
doc = []

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

