[package]
name = "gst-plugin-uridecodepool"
version = "0.11.0-alpha.1"
authors = ["Thibault Saunier <tsaunier@igalia.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT OR Apache-2.0"
description = "GStreamer Rust plugin to expose a pool of decoding pipelines as source elements"
edition = "2021"
rust-version = "1.66"

[dependencies]
url = "2"
gst-app = { workspace = true, features = ["v1_20"] }
gst = { workspace = true }
gst-base = { workspace = true, features = ["v1_24"] }

tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "time",
] }
futures = "0.3"
once_cell.workspace = true
parking_lot = "0.12"

[lib]
name = "gsturidecodepool"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path = "../../version-helper" }

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
